segundo commit Evelyn

--- a/src/views/pages/profile/profile.ejs
+++ b/src/views/pages/profile/profile.ejs
@@ -1,5 +1,5 @@
 
-<%- include('../../partials/header.html'); %>
+<%- include('../../partials/header.ejs'); %>
 
 
 <main>
@@ -39,7 +39,7 @@
   </main>
 
   <footer>
-    <%- include('../../partials/footer.html'); %>
+    <%- include('../../partials/footer.ejs'); %>
   </footer>
 
 
