--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <title>Plataforma Matchmaking</title>
 
     <base href="/">
-    <link rel="stylesheet" href="/partialsStyle.css">
+    <link rel="stylesheet" src="/partialsStyle.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <header>
